--- a/chart/helm-blue-green/values.yaml
+++ b/chart/helm-blue-green/values.yaml
@@ -4,13 +4,14 @@ host: http-echo.cluster-test.com
 blueGreen:
   enabled: true
   version: "{{ .Values.version }}"
+  minReplicas: 2
   hpa:
     enabled: true
-    minReplicas:  2
+    minReplicas: 2
     maxReplicas: 10
     targetCPUUtilizationPercentage: 80
   services:
   # - deploymentName: test # required
-  #   minReplicas: 1 # defaults 1
+  #   minReplicas: 1 # defaults blueGreen.minReplicas
   #   serviceName: paket # defaults deploymentName
   - deploymentName: http-echo
