delete deployments if exists

--- a/chart/helm-blue-green/templates/helm-blue-green.yaml
+++ b/chart/helm-blue-green/templates/helm-blue-green.yaml
@@ -50,6 +50,9 @@ spec:
           {{ if hasKey . "serviceName" }}serviceName={{.serviceName}}{{else}}serviceName={{ .deploymentName }}{{end}}
           deploymentVersion=$deploymentName-$version
 
+          # delete deployments if exists
+          kubectl -n $namespace delete deploy -lversion=$version
+
           kubectl -n $namespace get deploy $deploymentName -o json | jq "\
           .metadata.name=\"$deploymentVersion\"|\
           .spec.template.metadata.labels.version=\"$version\"|\
