--- a/chart/helm-blue-green/values.yaml
+++ b/chart/helm-blue-green/values.yaml
@@ -20,3 +20,5 @@ blueGreen:
   #   minReplicas: 1 # defaults blueGreen.minReplicas
   #   serviceName: paket # defaults deploymentName
   - deploymentName: http-echo
+  configmaps:
+  - configmapName: test-config
