--- a/chart/helm-blue-green/templates/deployment.yaml
+++ b/chart/helm-blue-green/templates/deployment.yaml
@@ -39,7 +39,7 @@ spec:
   selector:
     app: http-echo
 ---
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: http-echo
