--- a/charts/helm-blue-green/templates/hpa.yaml
+++ b/charts/helm-blue-green/templates/hpa.yaml
@@ -1,7 +1,7 @@
 {{- if .Values.hpa.enabled }}
 {{ range .Values.services }}
 ---
-apiVersion: autoscaling/v2beta2
+apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: {{ .deploymentName }}
