--- a/e2e/chart/Chart.yaml
+++ b/e2e/chart/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: helm-blue-green
-version: 0.0.4
+name: helm-blue-green-test
+version: 0.0.1
 icon: https://helm.sh/img/helm.svg
 description: Helm Blue Green
 maintainers:
