--- a/charts/helm-blue-green/templates/config.yaml
+++ b/charts/helm-blue-green/templates/config.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "common.names.fullname" . }}
+  name: {{ include "helm-blue-green.fullname" . }}
 data:
   config.yaml:
 {{ toYaml .Values.config | indent 4 }}
