--- a/charts/helm-blue-green/templates/rbac.yaml
+++ b/charts/helm-blue-green/templates/rbac.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "common.names.fullname" . }}
+  name: {{ include "helm-blue-green.fullname" . }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: {{ include "common.names.fullname" . }}-role
+  name: {{ include "helm-blue-green.fullname" . }}-role
 rules:
 - apiGroups: [ "autoscaling" ]
   resources: ["horizontalpodautoscalers"]
@@ -31,12 +31,12 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: {{ include "common.names.fullname" . }}-binding
+  name: {{ include "helm-blue-green.fullname" . }}-binding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: {{ include "common.names.fullname" . }}-role
+  name: {{ include "helm-blue-green.fullname" . }}-role
 subjects:
 - kind: ServiceAccount
-  name: {{ include "common.names.fullname" . }}
+  name: {{ include "helm-blue-green.fullname" . }}
   namespace: {{ .Release.Namespace }}
