fix application logic
Signed-off-by: Maksim Paskal <paskal.maksim@gmail.com>

--- a/charts/helm-blue-green/templates/config.yaml
+++ b/charts/helm-blue-green/templates/config.yaml
@@ -4,4 +4,4 @@ metadata:
   name: {{ include "helm-blue-green.fullname" . }}
 data:
   config.yaml:
-{{ toYaml .Values.config | indent 4 }}
+{{ toYaml (printf "%s\n%s" .Values.config .Values.extraConfig) | indent 4 }}
