--- a/charts/helm-blue-green/values.yaml
+++ b/charts/helm-blue-green/values.yaml
@@ -11,7 +11,16 @@ nodeSelector: {}
 affinity: []
 tolerations: []
 
+resources:
+  requests:
+    cpu: 100m
+    memory: 512Mi
+
 version: ""
+
+backoffLimit: 3
+activeDeadlineSeconds: 6000
+restartPolicy: OnFailure
 
 useDefaultsEnv: true
 minReplicas: 2
@@ -20,6 +29,7 @@ minAvailable: 1
 averageUtilization: 60
 
 config: ""
+extraConfig: ""
 
 configPath: "/config/config.yaml"
 extraEnv: []
