add webhook data
Signed-off-by: Maksim Paskal <paskal.maksim@gmail.com>

--- a/charts/helm-blue-green/templates/job.yaml
+++ b/charts/helm-blue-green/templates/job.yaml
@@ -57,6 +57,8 @@ spec:
         - name: VERSION
           value: {{ .Values.version | quote }}
 {{ if .Values.useDefaultsEnv }}
+        - name: ENVIRONMENT
+          value: {{ .Values.environment | quote }}
         - name: MIN_REPLICAS
           value: {{ .Values.minReplicas | quote }}
         - name: MAX_REPLICAS
