use context with timeouts
Signed-off-by: Maksim Paskal <paskal.maksim@gmail.com>

--- a/e2e/testdata/test1.yaml
+++ b/e2e/testdata/test1.yaml
@@ -8,7 +8,7 @@ minReplicas: 1
 deleteOrigins: false
 
 podCheckIntervalSeconds: 3
-podCheckMaxSeconds: 600
+maxProcessingTimeSeconds: 600
 
 hpa:
   minReplicas: 1
